@@ -1,29 +1,67 @@
 package org.beetl.core.runtime.impl;
 
-import org.beetl.android.util.SparseArray;
 import org.beetl.core.runtime.IBeetlMemoryManager;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.CopyOnWriteArrayList;
 
 /**
  * 通过维护 Collection 的引用，来避免重复创建 Collection 的实例
  * 当 Collection 的容量较大时，MemoryManager的优势开始凸显，减少了 Collection 扩容的开销
+ *
+ * <pre>
+ *     // 以下例子演示了如何通过 DefaultBeetlMemoryManager 使代码性能提升了 45% (1058ms → 578ms)
+ *     public void testRecoveryList() {
+ *         String tag = "recoveryList#";
+ *         int id = 1;
+ *
+ *         // performance: 当 Collection 的容量较大时，MemoryManager的优势开始凸显，减少了 Collection 扩容的开销
+ *         final int size = 20;
+ *         for (int i = 0; i < size; i++) {
+ *             List list = new ArrayList();
+ *             opList(list); // List 的数据操作
+ *             BeetlRuntime.getMemoryManager().recoveryList(list); // 回收引用
+ *         }
+ *
+ *         long time1 = System.nanoTime();
+ *         for (int i = 0; i < size; i++) { // 耗时: 578ms
+ *             List list = BeetlRuntime.getMemoryManager().takeList(); // 获取引用，没有则创建
+ *             opList(list); // List 的数据操作
+ *         }
+ *         long time2 = System.nanoTime();
+ *         for (int i = 0; i < size; i++) { // 耗时: 1058ms
+ *             List list = new ArrayList(); // 常规场景创建 List 的实例
+ *             opList(list); // List 的数据操作
+ *         }
+ *         long time3 = System.nanoTime();
+ *
+ *         System.out.println(tag + id++ + " 耗时: " + (time2 - time1) / 1_000_000 + "ms");
+ *         System.out.println(tag + id++ + " 耗时: " + (time3 - time2) / 1_000_000 + "ms");
+ *         System.out.println(BeetlRuntime.getMemoryManager());
+ *     }
+ *     // 一个模拟 list 操作的方法
+ *     private static void opList(List list) {
+ *         for (int i = 0; i < 1000_000; i++) {
+ *             list.add(i);
+ *         }
+ *     }
+ * </pre>
  */
 public class DefaultBeetlMemoryManager implements IBeetlMemoryManager {
+
+    /** 单例模式 - DefaultBeetlMemoryManager 的实例 */
+    private static IBeetlMemoryManager sInstance;
 
     /** 单例模式 - 不可获取实例 */
     private DefaultBeetlMemoryManager() {
         init();
     }
-
-    /** 单例模式 - DefaultBeetlMemoryManager 的实例 */
-    private static IBeetlMemoryManager sInstance;
 
     /**
      * 获取 DefaultBeetlMemoryManager 实例
@@ -42,36 +80,36 @@ public class DefaultBeetlMemoryManager implements IBeetlMemoryManager {
     }
 
     /** 缓存 {@link Map} 实例的数量上限 */
-    private static final int MAP_POOL_MAX_SIZE = 200;
+    public static final int sMapPoolMaxSize = 200;
     /** 缓存 {@link List} 实例的数量上限 */
-    private static final int LIST_POOL_MAX_SIZE = 200;
+    public static final int sListPoolMaxSize = 200;
     /** 缓存 {@link Set} 实例的数量上限 */
-    private static final int SET_POOL_MAX_SIZE = 200;
+    public static final int sSetPoolMaxSize = 200;
     /** 在每个LinkedList中缓存 {@link Clearable} 实例的数量上限 */
-    private static final int OBJECT_POOL_MAX_SIZE = 100;
+    public static final int sObjectPoolMaxSize = 100;
 
     /** 保存 Map 实例的缓存池 */
-    private LinkedList<Map> mMapPool;
+    private CopyOnWriteArrayList<Map> mMapPool;
     /** 保存 List 实例的缓存池 */
-    private LinkedList<List> mListPool;
+    private CopyOnWriteArrayList<List> mListPool;
     /** 保存 Set 实例的缓存池 */
-    private LinkedList<Set> mSetPool;
+    private CopyOnWriteArrayList<Set> mSetPool;
     /** 维护以 [实例 Class 的 hashCode ] 为 key，[保存 Clearable 实例的缓存池] 为 value 的映射 */
-    private SparseArray<LinkedList<Clearable>> mTypeObjectPoolMap;
+    private ConcurrentHashMap<Integer, CopyOnWriteArrayList<Clearable>> mTypeObjectPoolMap;
 
     /**
      * 初始化操作
      */
     private void init() {
-        mMapPool = new LinkedList<>();
-        mListPool = new LinkedList<>();
-        mSetPool = new LinkedList<>();
-        mTypeObjectPoolMap = new SparseArray<>();
+        mMapPool = new CopyOnWriteArrayList<>();
+        mListPool = new CopyOnWriteArrayList<>();
+        mSetPool = new CopyOnWriteArrayList<>();
+        mTypeObjectPoolMap = new ConcurrentHashMap<>();
     }
 
     @Override
     public Map takeMap() {
-        return mMapPool.isEmpty() ? new HashMap<>() : mMapPool.removeLast();
+        return mMapPool.isEmpty() ? new HashMap<>() : mMapPool.remove(mMapPool.size() - 1);
     }
 
     @Override
@@ -79,11 +117,11 @@ public class DefaultBeetlMemoryManager implements IBeetlMemoryManager {
         if (garbage == null) {
             return false;
         }
-        if (mMapPool.size() > MAP_POOL_MAX_SIZE) {
+        if (mMapPool.size() > sMapPoolMaxSize) {
             return false;
         }
         garbage.clear();
-        mMapPool.addLast(garbage);
+        mMapPool.add(garbage);
         return true;
     }
 
@@ -94,7 +132,7 @@ public class DefaultBeetlMemoryManager implements IBeetlMemoryManager {
 
     @Override
     public Set takeSet() {
-        return mSetPool.isEmpty() ? new HashSet<>() : mSetPool.removeLast();
+        return mSetPool.isEmpty() ? new HashSet<>() : mSetPool.remove(mSetPool.size() - 1);
     }
 
     @Override
@@ -102,11 +140,11 @@ public class DefaultBeetlMemoryManager implements IBeetlMemoryManager {
         if (garbage == null) {
             return false;
         }
-        if (mSetPool.size() > SET_POOL_MAX_SIZE) {
+        if (mSetPool.size() > sSetPoolMaxSize) {
             return false;
         }
         garbage.clear();
-        mSetPool.addLast(garbage);
+        mSetPool.add(garbage);
         return true;
     }
 
@@ -117,7 +155,7 @@ public class DefaultBeetlMemoryManager implements IBeetlMemoryManager {
 
     @Override
     public List takeList() {
-        return mListPool.isEmpty() ? new ArrayList() : mListPool.removeLast();
+        return mListPool.isEmpty() ? new ArrayList() : mListPool.remove(mListPool.size() - 1);
     }
 
     @Override
@@ -125,11 +163,11 @@ public class DefaultBeetlMemoryManager implements IBeetlMemoryManager {
         if (garbage == null) {
             return false;
         }
-        if (mListPool.size() > LIST_POOL_MAX_SIZE) {
+        if (mListPool.size() > sListPoolMaxSize) {
             return false;
         }
         garbage.clear();
-        mListPool.addLast(garbage);
+        mListPool.add(garbage);
         return true;
     }
 
@@ -144,12 +182,12 @@ public class DefaultBeetlMemoryManager implements IBeetlMemoryManager {
             return false;
         }
         int key = type.hashCode();
-        LinkedList<Clearable> pool = mTypeObjectPoolMap.get(key, new LinkedList<>());
-        if (pool.size() > OBJECT_POOL_MAX_SIZE) {
+        CopyOnWriteArrayList<Clearable> pool = mTypeObjectPoolMap.getOrDefault(key, new CopyOnWriteArrayList<>());
+        if (pool.size() > sObjectPoolMaxSize) {
             return false;
         }
         garbage.clear();
-        pool.addLast(garbage);
+        pool.add(garbage);
         mTypeObjectPoolMap.put(key, pool);
         return true;
     }
@@ -157,9 +195,9 @@ public class DefaultBeetlMemoryManager implements IBeetlMemoryManager {
     @Override
     public Clearable takeObject(Class<Clearable> type) {
         int key = type.hashCode();
-        LinkedList<Clearable> pool = mTypeObjectPoolMap.get(key, new LinkedList<>());
+        CopyOnWriteArrayList<Clearable> pool = mTypeObjectPoolMap.getOrDefault(key, new CopyOnWriteArrayList<>());
         if (!pool.isEmpty()) {
-            Clearable result = pool.removeLast();
+            Clearable result = pool.remove(pool.size() - 1);
             mTypeObjectPoolMap.put(key, pool);
             return result;
         }
@@ -180,7 +218,7 @@ public class DefaultBeetlMemoryManager implements IBeetlMemoryManager {
     public int sizeOfObjectPool() {
         int length = 0;
         for (int i = 0; i < mTypeObjectPoolMap.size(); i++) {
-            LinkedList<Clearable> pool = mTypeObjectPoolMap.get(i);
+            CopyOnWriteArrayList<Clearable> pool = mTypeObjectPoolMap.get(i);
             length += pool.size();
         }
         return length;
@@ -198,9 +236,9 @@ public class DefaultBeetlMemoryManager implements IBeetlMemoryManager {
             set.clear();
         }
         for (int i = 0; i < mTypeObjectPoolMap.size(); i++) {
-            LinkedList<Clearable> objectPool = mTypeObjectPoolMap.get(i);
+            CopyOnWriteArrayList<Clearable> objectPool = mTypeObjectPoolMap.get(i);
             while (!objectPool.isEmpty()) {
-                Clearable object = objectPool.pollLast();
+                Clearable object = objectPool.remove(objectPool.size() - 1);
                 object.clear();
             }
         }
